--- a/cr/icip/refs.bib
+++ b/cr/icip/refs.bib
@@ -233,3 +233,23 @@
   year={1995},
   publisher={IEEE}
 }
+
+@inproceedings{rodrigues2006selective,
+  title={Selective encryption of human skin in jpeg images},
+  author={Rodrigues, Jos{\'e} M and Puech, William and Bors, Adrian G},
+  booktitle={2006 International Conference on Image Processing},
+  pages={1981--1984},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{itti1998model,
+  title={A model of saliency-based visual attention for rapid scene analysis},
+  author={Itti, Laurent and Koch, Christof and Niebur, Ernst},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume={20},
+  number={11},
+  pages={1254--1259},
+  year={1998},
+  publisher={IEEE}
+}
