--- a/cr/icip/icip.tex
+++ b/cr/icip/icip.tex
@@ -51,40 +51,34 @@
 \maketitle
 %
 \begin{abstract}
-The abstract should appear at the top of the left-hand column of text, about
-0.5 inch (12 mm) below the title area and no more than 3.125 inches (80 mm) in
-length.  Leave a 0.5 inch (12 mm) space between the end of the abstract and the
-beginning of the main text.  The abstract should contain about 100 to 150
-words, and should be identical to the abstract text submitted electronically
-along with the paper cover sheet.  All manuscripts must be in English, printed
-in black ink.
+For security reasons, more and more digital data are transferred or stored in encrypted domains.  In particular for images, selective format-compliant JPEG encryption methods have been proposed during these last ten years. Since the encryption is selective, in order to reduce the processing time and to be format-compliant, it is thus now necessary to evaluate the confidentiality of these selective crypto-compressed JPEG images. The image quality metrics, such PSNR or SSIM, give a very low correlation with a mean opinion score (MOS). In this paper, we propose an efficient confidentiality metric based on the visual saliency diffusion. We show experimentally that this metric is well correlated with a MOS and efficient for selective crypto-compressed JPEG images.
 \end{abstract}
 %
 \begin{keywords}
-One, two, three, four, five
+JPEG, confidentiality metric, visual saliency, encryption
 \end{keywords}
 %
 \section{Introduction}
 \label{sec:intro}
-More and more content is being shared everyday on the internet. Some of it needs to be securely transfered, the problem of encryption arises. Full encryption with methods such as AES for exemple are often not needed in addition to not being possible due to computing power constraints. Instead, partial or selective encryption is used, where the goal is sufficient encryption. % That is, the image is sufficently distorted and an attacker is not able to access the content. This distortion can be of varying magnitude, a strong distortion for exemple for DRM, or a lighter distortion, where the content is still recognizable to attract the viewers interest.
+More and more content is being shared everyday on the internet. Some of it needs to be securely transfered, the problem of encryption arises. Full encryption with methods such as AES for example are often not needed in addition to not being possible due to computing power constraints. Instead, partial or selective encryption is used, where the goal is sufficient encryption. % That is, the image is sufficently distorted and an attacker is not able to access the content. This distortion can be of varying magnitude, a strong distortion for exemple for DRM, or a lighter distortion, where the content is still recognizable to attract the viewers interest.
 
-When an image is intented to be consumed by a human, the most accurate measure of its confidentiality is a Mean Opinion Score (MOS), where actual people rate the image. It is however not a realistic way to rate the distortion of an image as it is way to expensive and time consuming, security and quality metrics were introduced as a means to automate the process.
+When an image is intended to be consumed by a human, the most accurate measure of its confidentiality is a Mean Opinion Score (MOS), where actual people rate the image. It is however not a realistic way to rate the distortion of an image as it is way to expensive and time consuming, security and quality metrics were introduced as a means to automate the process.
 
 Image quality assessment is divided in two main fields, no reference image quality assessment (NR-IQA), which refers to cases where only the processed image is available, with no extra information, and full reference image quality assessment (FR-IQA), where both the processed and the original image are available. In this paper, we focus on FR-IQA and we quality metrics as security metrics, since as explained in Section~\ref{sec:evaluation}, security is achieved through low quality.
 % Image quality assessment is divided in two main fields, no reference image quality assessment (NR-IQA) and full reference image quality assessment (FR-IQA). NR-IQA refers to cases where only the processed image is available without extra information, such as the original image for example. We however focus our work on FR-IQA so we won't get into more details about  NR-IQA.
 % We do not distinguish between security metrics and quality metrics, since in our case they will be used interchangeabley, as we will see in Section~\ref{sec:dataset}, our images range from very low quality, or fully encrypted, to very high quality, with almost no encryption.
-The PSNR is the most well known metric, but has been shown not to be well correlated with the human visual system (HVS), especially on low quality images. The SSIM~\cite{wang2004image}, even if better correletated with the HVS, is not consistent across all image qualities. Similar metrics \cite{sheikh2006image, yao2009visual, tong2010visual, sun2011objective} exhibit the same deficiencies, either on low or high quality images, as shown in \cite{hofbauer2016identifying}, there is not yet a security metric that consistently rates images across all the MOS spectrum. Most quality metrics fail to predict a MOS on low quality images, precisely where it would be most important to do so: decide whether or not an image is confidential.
+The PSNR is the most well known metric, but has been shown not to be well correlated with the human visual system (HVS), especially on low quality images. The SSIM~\cite{wang2004image}, even if better correlated with the HVS, is not consistent across all image qualities. Similar metrics \cite{sheikh2006image, yao2009visual, tong2010visual, sun2011objective} exhibit the same deficiencies, either on low or high quality images, as shown in \cite{hofbauer2016identifying}, there is not yet a security metric that consistently rates images across all the MOS spectrum. Most quality metrics fail to predict a MOS on low quality images, precisely where it would be most important to do so: decide whether or not an image is confidential.
 
-The most popular image compression standard is JPEG \cite{wallace1992jpeg}. In order to exploit both efficient compression and encryption, format compliant methods are designed to produce content compatible with format specifications. There exists several format compliant JPEG encryption methods which can be used in this context. Partial encryption methods using sign encryption have been shown unsecure by Said \cite{said2005measuring}. Partial encryption can be applied selectively on automaticaly detected faces \cite{rodrigues2006selective}. This method which relies on XOR operation with the AES algorithm, performs the compression and the encryption in the same process. Partial encryption is sufficient to hide sensitive information, such as text \cite{pinto2013protection}. Moreover, it has the advantage to not change the size of the encrypted file. A reversible watermarking method in encrypted domain has been proposed by Qian \textit{et al.} \cite{qian2014reversible}. This method relies on XOR operation but for more visual masking author encrypt also quantization table. Blocks and coefficients scrambling is used in \cite{niu2008jpeg, unterweger2012length, minemura2012jpeg, ong2015beyond}. Simple scrambling methods tend to increase the size if there is no verification of the run-length for example. Inter-block shuffle and non-zeros AC scrambles methods have been shown insecure to sketch attack by Li and Yan \cite{li2007leak}.
+The most popular image compression standard is JPEG \cite{wallace1992jpeg}. In order to exploit both efficient compression and encryption, format compliant methods are designed to produce content compatible with format specifications. There exists several format compliant JPEG encryption methods which can be used in this context. Partial encryption methods using sign encryption have been shown insecure by Said \cite{said2005measuring}. Partial encryption can be applied selectively on automatically detected faces \cite{rodrigues2006selective}. This method which relies on XOR operation with the AES algorithm, performs the compression and the encryption in the same process. Partial encryption is sufficient to hide sensitive information, such as text \cite{pinto2013protection}. Moreover, it has the advantage to not change the size of the encrypted file. A reversible watermarking method in encrypted domain has been proposed by Qian \textit{et al.} \cite{qian2014reversible}. This method relies on XOR operation but for more visual masking author encrypt also quantization table. Blocks and coefficients scrambling is used in \cite{niu2008jpeg, unterweger2012length, minemura2012jpeg, ong2015beyond}. Simple scrambling methods tend to increase the size if there is no verification of the run-length for example. Inter-block shuffle and non-zeros AC scrambles methods have been shown insecure to sketch attack by Li and Yan \cite{li2007leak}.
 
-In this paper, we present a new metric...
+In this paper, we present our work on a metric based on the visual saliency as a means to evaluate the confidentiality of images.
 
 \paragraph*{}
 Section~\ref{sec:dataset} presents the dataset we used and how it was created. Then, in Section~\ref{sec:evaluation} we discuss the evaluation and rating of its images, by human (MOS) as well as by security metrics. We thus introduce a new metric for image evaluation based on the visual saliency in Section~\ref{sec:metric}. Finally we conclude and open a few perspectives in Section~\ref{sec:conclusion}.
 
 \section{Creation and utilization of the dataset}
 \label{sec:dataset}
-The cryptocompression method we used is targeted towards JPEG images. We have six parameters that we can enable or not to generate cryptocompressed images. \textit{Shuffle} and \textit{XOR} are the parameters that decide the actual encryption method. \textit{AC} and \textit{DC} control which part of the DCT coefficients is encrypted and two additionnal parameters, \textit{chrominance} and \textit{luminance} decide which of the luminance, chrominance (or both) DCT coefficients is encrypted. As there must be at least one encryption method, at least one type of coefficient, and chrominance or luminance selected, we have selected a total of 27 distortions by combining these parameters. The distortion ranges from completely indecipherable images to almost invisible perturbations, as shown in Fig. \ref{fig:images}. This way, we hope to have appropriate distortions for different use cases.
+The cryptocompression method we used is targeted towards JPEG images. We have six parameters that we can enable or not to generate cryptocompressed images. \textit{Shuffle} and \textit{XOR} are the parameters that decide the actual encryption method. \textit{AC} and \textit{DC} control which part of the DCT coefficients is encrypted and two additional parameters, \textit{chrominance} and \textit{luminance} decide which of the luminance, chrominance (or both) DCT coefficients is encrypted. As there must be at least one encryption method, at least one type of coefficient, and chrominance or luminance selected, we have selected a total of 27 distortions by combining these parameters. The distortion ranges from completely indecipherable images to almost invisible perturbations, as shown in Fig. \ref{fig:images}. This way, we hope to have appropriate distortions for different use cases as well as a wide range of distortion for each MOS to show that different perturbation result in the same level of degradation.
 
 \begin{figure*}[ht]
 \centering
@@ -160,11 +154,11 @@ The cryptocompression method we used is targeted towards JPEG images. We have si
 % \label{fig:images}
 % \end{figure}
 
-The \textit{XOR} parameter corresponds to the method proposed by Puech \textit{et al.} \cite{fernandez2012advanced}. This method partially encrypts an image. This can be useful for partial visualisation, even if we only use it on the whole image, and it has two main strengths: it does not increase the size of the JPEG bitstream and it changes the DCT coefficients histogram. We encrypt the amplitude part of non null AC coefficients \textit{i.e.} the concatenation of the amplitude of each coefficient of each block $[A_0^i,..., A_k^i,..., A_0^n,..., A_k^n]$, where $n$ is the number of blocks. The amplitude sequence is denoted $A = [a_0,..., a_l]$ where $l$ is the number of amplitude bits. A standard stream cipher function is used to generate a pseudo-random sequence $E = [e_0,..., e_l]$ from a secret key. This sequence is XORed with the incoming plaintext to produce a ciphered sequence $\widetilde{A} = \widetilde{a}_0,..., \widetilde{a}_l$ where $\widetilde{a}_i = a_i \oplus e_i, i \in [0,l]$. The encrypted sequence is substitued to the amplitudes in the original bitstream.
+The \textit{XOR} parameter corresponds to the method proposed by Puech \textit{et al.} \cite{fernandez2012advanced}. This method partially encrypts an image. This can be useful for partial visualization, even if we only use it on the whole image, and it has two main strengths: it does not increase the size of the JPEG bitstream and it changes the DCT coefficients histogram. We encrypt the amplitude part of non null AC coefficients \textit{i.e.} the concatenation of the amplitude of each coefficient of each block $[A_0^i,..., A_k^i,..., A_0^n,..., A_k^n]$, where $n$ is the number of blocks. The amplitude sequence is denoted $A = [a_0,..., a_l]$ where $l$ is the number of amplitude bits. A standard stream cipher function is used to generate a pseudo-random sequence $E = [e_0,..., e_l]$ from a secret key. This sequence is XORed with the incoming plaintext to produce a ciphered sequence $\widetilde{A} = \widetilde{a}_0,..., \widetilde{a}_l$ where $\widetilde{a}_i = a_i \oplus e_i, i \in [0,l]$. The encrypted sequence is substituted to the amplitudes in the original bitstream.
 
 The \textit{shuffle} parameter corresponds to a full inter-block shuffle (FIBS), proposed by Li and Yuan \cite{li2007leak}. This method can scramble DC coefficients as well as same frequency AC coefficients. As it scrambles all coefficients, run length encoding does not perform as well and the size of the image can increase. According to the authors, the use of all AC coefficients, zero as well as non-zero, creates a more secure image, less sensitive to jigsaw puzzle attacks \cite{}.
 
-We used the training images from the BSDS500 \cite{amfm_pami2011} dataset as our input images for a total of $27 \times 200 = 5400$ cryptocompressed images.
+We used the training images from the BSDS500 \cite{amfm_pami2011} dataset as our input images for a total of $27 \times 200 = 5400$ cryptocompressed images, each named after the parameters used for its creation and its original name. The dataset is available at \cite{}.
 
 % The 27 distortions are given in Appendix \ref{ann:distortions}, they are named according to the parameters enabled and are sorted by MOS, as explained in Section \ref{sec:evaluation}. They are later designated by their number for ease of use.
 
@@ -177,7 +171,9 @@ We conducted our evaluation on \textit{N} different people. They had to give a s
 \textbf{4 :} The distortion is slightly annoying, but the content is clear\\
 \textbf{5 :} The distortion is not annoying at all \\
 
-An example of the 5 MOS is illustrated Fig.~\ref{fig:images}. They had to rate 81 images, three for each distortion. The sessions were 10 to 15 minutes long, depending on the person. Each image has been seen at most once by each user, to prevent them from recognising it and give it a higher score. The distortions order was shuffled differently for each evaluation and repeated three times in the same order. %We chose to have each distortion rated three times because during our preliminary tests, we saw that for the first few images, the user was not confident on the score to give to an image, confidence that improved as they saw more images and distortions. It allowed us to filter the outliers caused by the learning curve while still having a good amount of rating.
+A score of 1 corresponds to an fully confidential image, where no information about its content is available while a score of 5 corresponds to an image with no apparent distortion, or a high quality image.
+
+An example of the 5 MOS is illustrated Fig.~\ref{fig:images}. They had to rate 81 images, three for each distortion. The sessions were 10 to 15 minutes long, depending on the person. Each image has been seen at most once by each user, to prevent them from recognizing it and give it a higher score. The distortions order was shuffled differently for each evaluation and repeated three times in the same order. %We chose to have each distortion rated three times because during our preliminary tests, we saw that for the first few images, the user was not confident on the score to give to an image, confidence that improved as they saw more images and distortions. It allowed us to filter the outliers caused by the learning curve while still having a good amount of rating.
 
 \begin{figure}[H]
   \centering
@@ -292,7 +288,7 @@ Our goal is to predict the rating a human would give to an image. In the best ca
 %   \caption{MOS on the x-axis and horizontal correlation on the y-axis\label{fig:correlation} }
 % \end{figure}
 
-As we can se from these figures, most metrics actually follow a rough line, but distortions $5$ to $17$ are problematic and prevent us from predicting the MOS. These distortions also happen to be between a MOS of 2 and 3, where the threshold for a confidential image would be. Even the SSIM, which is the most accurate metric in our experiment, fails to predict the MOS.%, as shown in Fig.~\ref{fig:sub4}. The SSIM ranges from 0 to 1, and from Fig.~\ref{fig:sub4}, we can see that for the same MOS the SSIM goes across almost all its range. A similar behavior is seen for the other metrics.
+As we can see from these figures, most metrics actually follow a rough line, but distortions $5$ to $17$ are problematic and prevent us from predicting the MOS. These distortions also happen to be between a MOS of 2 and 3, where the threshold for a confidential image would be. Even the SSIM, which is the most accurate metric in our experiment, fails to predict the MOS.%, as shown in Fig.~\ref{fig:sub4}. The SSIM ranges from 0 to 1, and from Fig.~\ref{fig:sub4}, we can see that for the same MOS the SSIM goes across almost all its range. A similar behavior is seen for the other metrics.
 
 % \begin{figure}[ht]
 %   \centering
@@ -375,46 +371,24 @@ As we can se from these figures, most metrics actually follow a rough line, but 
 % \item ac\_shuffle\_chrominance
 % \end{enumerate}
 
-% List and number all bibliographical references at the end of the
-% paper. The references can be numbered in alphabetic order or in
-% order of appearance in the document. When referring to them in
-% the text, type the corresponding reference number in square
-% brackets as shown at the end of this sentence \cite{C2}. An
-% additional final page (the fifth page, in most cases) is
-% allowed, but must contain only references to the prior
-% literature.
 
-% References should be produced using the bibtex program from suitable
-% BiBTeX files (here: strings, refs, manuals). The IEEEbib.bst bibliography
-% style file from IEEE produces unsorted bibliography list.
-% -------------------------------------------------------------------------
+
 \section{Visual saliency as a means to evaluate image}
 \label{sec:metric}
 In this section, we present the new metric we designed, the results we obtained and their analysis. Our metric is based on the visual saliency in images, and more specifically, and saliency map, a grayscale image where less salient pixels are darker than more salient pixels in the original image. The visual saliency is interesting in our case for image quality assessment because we want to know whether the meaning of the content of an image is accessible. According to \cite{itti1998model}, important information is located in salient areas. Our reasoning is twofold: if salient areas are consistent in both the original and the processed image, the same amount of information is present in the images and the content is readily available, and if no salient areas can be found, as important information is located in salient areas, then the content is hidden. We try to compute to which extent the visual saliency of two images are similar to extract a score.
 
 \paragraph*{}
-Let $M_o$  be the saliency map of the original image and $M_p$ be the saliency map of the processed image. A threshold is applied to $M_o$ and $M_p$ to only keep the most salient areas of each image, the best threshold has been experimentally found (Fig~\ref{}) to be $5\%$ more salient areas. Two binary images are thus created, $B_o$ from $M_o$ and $B_p$ from $M_p$. A first value is computed as such:
-$$
-v = \frac{\sum_{i=0}^{width}\sum_{j=0}^{height}{f(B_o(i,j), B_p(i,j))}}{sum(B_o)},
-$$
+Let $M_o$  be the saliency map of the original image and $M_p$ be the saliency map of the processed image. A threshold is applied to $M_o$ and $M_p$ to only keep the most salient areas of each image, the best threshold has been experimentally found (Fig.~\ref{}) to be $5\%$ more salient areas. Two binary images are thus created, $B_o$ from $M_o$ and $B_p$ from $M_p$. A first value is computed as such:
 
-where $f(.,.)$ is:
+\begin{equation}
+  \label{eqn:eqn}
+  v = \frac{\sum_{i=0}^{width}\sum_{j=0}^{height}{B_o(i,j) \times B_p(i,j)}}{sum(B_o)},
+\end{equation}
 
-$$
-f(x,y) = \begin{cases}
-    1, & \textbf{if}\ x = 1\ \textbf{and}\ y = 1\\ 
-    0 & Otherwise,
-  \end{cases}
-$$
-
-and $sum(B_o)$ is actually the number of pixels of value 1.
+where $B_o(i,j) \times B_p(i,j)$ is equal to 1 when both pixels are equal to 1 and $sum(B_o)$ is the number of pixels of value 1 in the bitmap of the original image.
 
 \paragraph*{}
-\begin{figure}[H]
-  \centering
-\end{figure}
-
-\begin{figure}[ht]
+\begin{figure}
 \centering
 \begin{subfigure}{4.0cm}
   \centering
@@ -438,10 +412,11 @@ and $sum(B_o)$ is actually the number of pixels of value 1.
 % This technique, however intersting on paper, works well for both ends of the MOS spectrum but is not able to predict the MOS for mid-quality images, around a MOS of 2 or 3.
 This technique works well for high or low quality images, where our metric accurately predicts the MOS. The results are however not as good for mid quality images, when the MOS is around 2-3. Because of this, we can only tell that an image is either fully confidential or not very to not confidential at all, but not to which degree it is confidential.
 
-This is due to the fact that we are not able to compute a meaningful saliency map on images with a global, patterned noise, such as such as a $XOR$ on the DC coefficients of the luminance channel for example (Fig~\ref{fig:dc_xor}). Another problem we encountered is that the the visual saliency performs too well on distorted images where the global structure is intact but ..., typically when a $XOR$ is applied to the AC coefficients of the luminance channel (Fig~\ref{fig:ac_xor}).
+This is due to the fact that we are not able to compute a meaningful saliency map on images with a global, patterned noise, such as such as a $XOR$ on the DC coefficients of the luminance channel for example (Fig.~\ref{fig:dc_xor}). Another problem we encountered is that the visual saliency performs too well on distorted images where the global structure is intact but the fine grained details are not available, typically when a $XOR$ is applied to the AC coefficients of the luminance channel (Fig.~\ref{fig:ac_xor}).
 
 Because of these two types of distortions, and their variations, using only the visual saliency is not a realistic approach for automatic image evaluation. We introduce a second score, based on the Sobel operator in an attempt to stabilize our first score.
 
+Distortions such as Fig.~\ref{fig:dc_xor} do not hinder the edges detection, making it a good candidate to balance the visual saliency defects. Our second score is computed the same way as our first one. Two maps $S_o$ and $S_p$ are computed using the Sobel operator for the original and processed image. A threshold is then applied to $S_o$ and $S_p$ to only keep the most ??? edges, thus creating two other bitmaps. Our second score is then obtained just like Eqn~\ref{eqn:eqn}, it is the ratio of equal pixels of value 1 in both bitmaps over the total number of pixels of value 1 in the bitmap of the original image. The final score is then obtained by averaging both scores.
 
 
 \section{Conclusion}
